bs5: fix filter editor spacing

--- a/src-ui/src/theme.scss
+++ b/src-ui/src/theme.scss
@@ -1,6 +1,7 @@
 $paperless-green: #17541f;
 $primary: #17541f;
 $primaryFaded: #d1ddd2;
+$enable-negative-margins: true;
 
 .bg-body {
   background-color: #fff;
